--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Advocatus</string>
     <string name="facebook_app_id">192885334523318</string>
     <string name="fb_login_protocol_scheme">fb192885334523318</string>
+    <string name="title_activity_helper">HelperActivity</string>
 </resources>
