--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,8 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="helper_profile_pic">Helper Profile pic</string>
+    <string name="user_name">User Name</string>
+    <string name="points">points</string>
 
 </resources>
